# dff-api

./: .gitmodules  CMakeLists.txt  __init__.py
apswvfs/: CMakeLists.txt  __init__.py  apswvfs.py
crashreporter/: CMakeLists.txt  handler.cpp  libcrashreporter.i
crashreporter/reporter/: crashdumpinfo.cpp  main.cpp
datatype/: CMakeLists.txt  __init__.py  datatype.cpp  libdatatype.i  magichandler.py  mimetree.py
devices/: CMakeLists.txt  __init__.py  dbushaldev.py  device.cpp  devices.py  libdevices.i  udevice.cpp  wmidev.cpp
events/: CMakeLists.txt  __init__.py  eventhandler.cpp  libevents.i
exceptions/: CMakeLists.txt  __init__.py  exceptions.cpp  libexceptions.i  patch.py
exceptions/breakpad/: CMakeLists.txt
exceptions/reporter/: CMakeLists.txt  crashdialog.cpp  crashdialog.hpp  crashdumpinfo.cpp  crashdumpinfo.hpp  crashreporter.cpp  crashreporter.hpp  main.cpp
filters/: CMakeLists.txt  astnodes.cpp  astnodes.hpp  dictionnary.cpp  dictionnary.hpp  factory.cpp  factory.hpp  filter.cpp  libfilters.i  parser.cpp  parser.hpp  parser.y  scanner.cpp  scanner.l  timeline.cpp
gui/: CMakeLists.txt  __init__.py  thumbnail.py
gui/dialog/: CMakeLists.txt  __init__.py  applymodule.py  extractor.py  selectattributes.py  tagedit.py  tagmanager.py
gui/model/: CMakeLists.txt  __init__.py  node_list.py  selection.py  status.py  tree.py
gui/video/: CMakeLists.txt  __init__.py  video.cpp  video.hpp  video.i
gui/view/: CMakeLists.txt  __init__.py  node_list.py  node_table.py  tree.py
gui/widget/: CMakeLists.txt  __init__.py  devicesdialog.py  dockwidget.py  generateModuleShape.py  layoutmanager.py  linklabel.py  nodelistwidgets.py  nodeview.py  nodewidget.py  propertytable.py  renderer.py  status.py  statusbar.py  textedit.py  varianttreewidget.py
gui/widget/search/: CMakeLists.txt  __init__.py  dico_manager.py  filter.py  predefilters.py  search_widget.py  thread.py
include/: argument.hpp  cache.hpp  config.hpp  confmanager.hpp  constant.hpp  datatype.hpp  datetime.hpp  device.hpp  dswrapper.i  eventhandler.hpp  exceptions.hpp  export.hpp  fastsearch.hpp  fdmanager.hpp  filemapping.hpp  filter.hpp  fso.hpp  index.hpp  iostat.hpp  libbfio_wrapper.hpp  logicaldrive.hpp  magichandler.hpp  mfso.hpp  node.hpp  path.hpp  rc.hpp  rootnode.hpp  search.hpp  simplefso.hpp  tags.hpp  threading.hpp  timeline.hpp  typesconv.hpp  udevice.hpp  variant.hpp  vfile.hpp  vfs.hpp  vlink.hpp  vtime.hpp  wmidev.hpp
index/: CMakeLists.txt  __init__.py  index.cpp  index_search.cpp  libindex.i
loader/: CMakeLists.txt  __init__.py  loader.py
magic/: CMakeLists.txt  __init__.py  config.h.in  file.h  funcs.c  magic.h  magic.py  softmagic.c  test.cpp
magic/magic/: archive  database  flash  iso9660  msdos  windows
manager/: CMakeLists.txt  __init__.py  manager.py
module/: CMakeLists.txt  __init__.py  manager.py  module.py  script.py
search/: CMakeLists.txt  __init__.py  boyer_moore.cpp  boyer_moore.hpp  libsearch.i  pattern.hpp  search.cpp
session/: CMakeLists.txt  case.py  configuration.hpp  session.cpp  session.hpp
taskmanager/: CMakeLists.txt  __init__.py  processus.py  scheduler.py  taskmanager.py
tree/: CMakeLists.txt  TwoThreeNode.cpp  TwoThreeNode.hpp  TwoThreeTree.cpp  TwoThreeTree.hpp  __init__.py  libtree.i
types/: CMakeLists.txt  __init__.py  argument.cpp  arguments.cpp  config.cpp  confmanager.cpp  constant.cpp  datetime.cpp  libtypes.i  path.cpp  results.cpp  threading.cpp  variant.cpp  vtime.cpp
vfs/: CMakeLists.txt  __init__.py  cache.cpp  configuration.cpp  configuration.hpp  datatype.cpp  declare.cpp  extract.py  fdmanager.cpp  filemapping.cpp  fso.cpp  iodevice.py  iostat.cpp  libvfs.i  log.cpp  log.hpp  magichandler.py  mfso.cpp  node.cpp  rc.cpp  rootnode.cpp  session.cpp  session.hpp  simplefso.cpp  tags.cpp  vfile.cpp  vfs.cpp  vfs.py  vlink.cpp
